Update package.json, add sonner library, update About component with new images, update Contact component with emailjs library, update Footer and Home components, update various CSS files, and remove Footer component.

--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,12 @@
   font-size: 1vw;
   color: var(--Text-color);
   cursor: pointer;
-
+  z-index: 2;
 }
 
 .schrollDown img{
   transition: transform .5s ease;
+  height: 1.5vw;
 }
 
 .schrollDown:hover img{
@@ -61,4 +62,5 @@
   -webkit-background-clip: text; /* For Webkit-based browsers (Chrome, Safari) */
   background-clip: text;
   color: transparent;
+  z-index: 1;
 }
