--- a/src/componantStyle/home.css
+++ b/src/componantStyle/home.css
@@ -55,6 +55,11 @@
 
 .homeButton{
     width: fit-content;
+    height: fit-content;
+}
+
+.homeButton img {
+    height: 1.6vw;
 }
 
 .homeButton a{
@@ -89,7 +94,7 @@
     gap: 4px;
     font-weight: 600;
     font-size: 1.2vw;
-}
+} 
 
 #light{
     color: #7070B0;
