--- a/src/componantStyle/contact.css
+++ b/src/componantStyle/contact.css
@@ -1,7 +1,6 @@
 .contactSection{
     padding: 2vw 12vw 0vw 12vw;
     overflow: hidden;
-    z-index: 3;
     display: flex;
     flex-direction: column;
     gap: 1.5vw;
@@ -23,6 +22,7 @@
     display: flex;
     flex-direction: column;
     gap: 2.5vw;
+    z-index: 2;
 }
 
 .contactInputs{
@@ -82,7 +82,10 @@
 #discriptionContact{
     width:68%;
     font-weight: 500;
-    z-index: 10;
+    line-height: 2vw;
+    text-size-adjust:unset;
+    text-align: justify;
+    font-size: 1vw;
 }
 
 .contactTXT .informationpersonal{
@@ -110,4 +113,16 @@
 
 .contactInput input:focus::placeholder, .contactInput Textarea:focus::placeholder{
     color: var(--purple-color);
+}
+
+.senEmail{
+    padding: .5vw 1.5vw;
+    font-weight: 600;
+    font-size: 1vw;
+    border-radius: 5px;
+    cursor: pointer;
+    color: var( --backGround-color);
+    background-color: var(--purple-color);
+    outline: none;
+    border: none;   
 }
